Updated website for Postdoc

--- a/cv.html
+++ b/cv.html
@@ -9,10 +9,11 @@ title: Curriculum Vitae
 </h2>
 
 <ul>
-    <li><b>Gynmasium Degree</b> with final grade 1.0 from the Hallertauer Gymnasium Wolnzach, Germany (2005-2013)</li>
-    <li><b>Bachelor Degree</b> with final grade 1.9 in Informatics, Games Engineering from the Technical University of Munich, Germany (2013-2016)</li>
-    <li><b>Master Degree</b> with final grade 1.5 in Informatics from the Technical University of Munich, Germany (2016-2019)</li>
-    <li><b>Ph.D. Degree</b> in Software Engineering from the Blekinge Institute of Technology, Sweden (2020-2025)</li>
+    <li><b>Gynmasium</b> at the Hallertauer Gymnasium Wolnzach, Germany, with final grade 1.0 (2005-2013)</li>
+    <li><b>Bachelor of Science</b> in Informatics, Games Engineering, from the Technical University of Munich, Germany, with final grade 1.9 (2013-2016)</li>
+    <li><b>Master of Science</b> in Informatics from the Technical University of Munich, Germany, with final grade 1.5 (2016-2019)</li>
+    <li><b>Ph.D. Student</b> in Software Engineering at the Blekinge Institute of Technology, Sweden (2020-2025)</li>
+    <li><b>Postdoctoral Researcher</b> in Software Engineering at the Chalmers University of Technology, Sweden (2025-current)</li>
 </ul>
 
 <h2>
@@ -76,9 +77,9 @@ title: Curriculum Vitae
 
 <ul>
     <li><b>Program Committee Co-Chair</b> of the 11th International Workshop on Artificial Intelligence and Requirements Engineering (AIRE'24), and the 8th International Workshop on Crowd-Based Requirements Engineering (CrowdRE'24)</li>
-    <li><b>Organizing Committee Member</b>: <i>publicity chair</i> of the 32nd IEEE International Requirements Engineering 2024 conference (RE'24), <i>proceedings chair</i> of the 30th International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'24), <i>open science chair</i> of the 31st International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'25)</li>
+    <li><b>Organizing Committee Member</b>: <i>publicity chair</i> of the 32nd IEEE International Requirements Engineering 2024 conference (RE'24), <i>proceedings chair</i> of the 30th International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'24), <i>open science chair</i> of the 31st International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'25), <i>proceedings chair</i> of the 51st Euromicro Conference Series on Software Engineering and Advanced Applications (SEAA'25)</li>
     <li><b>Program Committee Member</b> in Workshop on Natural Language Processing for Requirements Engineering (NLP4RE, 2022-2024), International Conference on the Quality of Information and Communications Technology (QUATIC, 2023-2024), International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ, 2024-2025), Workshop on Multi-disciplinary, Open, and RElevant Requirements Engineering (MO2RE, 2024-2025)</li>
-    <li>Invited <b>Journal Reviewer</b> for Transactions on Software Engineering (TSE), Empirical Software Engineering (EMSE), Requirements Engineering (REJ), Journal of Systems and Software (JSS), Information and Software Technology (IST)</li>
+    <li>Invited <b>Journal Reviewer</b> for Transactions on Software Engineering (TSE), Transactions on Software Engineering and Methodology (TOSEM), Empirical Software Engineering (EMSE), Requirements Engineering (REJ), Journal of Systems and Software (JSS), Information and Software Technology (IST), Business & Information Systems Engineering (BISE)</li>
 </ul>
 
 <h2>
