--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: page
 title: Home
 ---
 
-<p>My name is Julian Frattini and I am ab Universitetsadjunkt at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology (BTH)</a>, Sweden. I recently completed my Ph.D. studies under the supervision of <a href="https://www.mendezfe.org/" target="_blank">Professor Daniel Mendez</a>. My research interest include <b>requirements engineering</b> with a main focus on <b>requirements quality</b>, and the application of <b>empirical research methods</b>.</p> 
+<p>My research revolves around <b>quality of requirements artifacts</b>, <b>empirical research methods</b> with a focus on statistical causal inference and Bayesian data analysis, and some new topics coming soon. Stay tuned.</p> 
 
-<p>On this page, you will find some basic information about me. Particularly:</p>
+<p>On this website, you will find some basic information about me, like:</p>
 
 <ul>
     <li><a href="{{ site.url }}/cv"><b>Curriculum vitae</b></a>: a high-level summary of my education, development, and milestones</li>
@@ -17,4 +17,4 @@ title: Home
     </ul>
 </ul>
 
-<p>If you require any further information, please feel free to <a href="mailto:juf@bth.se">contact me</a>. Links to my profile on other platforms can be found at the bottom of the sidebar.</p>
+<p>If you require any further information, please feel free to <a href="mailto:julian.frattini@chalmers.se">contact me</a>. Links to my profile on other platforms can be found at the bottom of the sidebar.</p>
