Replaced landing page tree with tiles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 <p>On this website, you will find some basic information about me, like:</p>
 
-<ul>
+<!--<ul>
     <li><a href="{{ site.url }}/cv"><b>Curriculum vitae</b></a>: a high-level summary of my education, development, and milestones</li>
     <li><a href="{{ site.url }}/research"><b>Research</b></a>: a summary of the research that I am engaged in</li>
     <ul>
@@ -15,6 +15,38 @@ title: Home
         <li><a href="{{ site.url }}/thesis"><b>Ph.D. Thesis</b></a>: the set of publications that compose my dissertation</li>
         <li><a href="{{ site.url }}/publications"><b>Publications</b></a>: a full list of publications that I was involved in</li>
     </ul>
-</ul>
+</ul>-->
+
+<div class="tilebox">
+    <a class="tile" href="{{ site.url }}/cv">
+        <span class="icon-item">
+            <i class="fa-solid fa-school"></i>
+        </span>
+        <h3>Curriculum Vita</h3>
+        <span>Education, development, and milestones</span>
+    </a> 
+      
+    <a class="tile" href="{{ site.url }}/initiatives"> 
+        <span class="icon-item">
+            <i class="fa-solid fa-atom"></i>
+        </span>
+        <h3>Initiatives</h3>
+        <span>Overarching research endeavors</span>
+    </a>  
+    <a class="tile" href="{{ site.url }}/thesis">
+        <span class="icon-item">
+            <i class="fa-solid fa-book"></i>
+        </span>
+        <h3>Thesis</h3> 
+        <span>Publications in my doctoral dissertation</span>
+    </a> 
+    <a class="tile" href="{{ site.url }}/publications">
+        <span class="icon-item">
+            <i class="fa-solid fa-file"></i>
+        </span>
+        <h3>Publications</h3>
+        <span>Full list of peer-reviewed publications</span>
+    </a>
+</div>
 
 <p>If you require any further information, please feel free to <a href="mailto:julian.frattini@chalmers.se">contact me</a>. Links to my profile on other platforms can be found at the bottom of the sidebar.</p>
