--- a/initiatives.html
+++ b/initiatives.html
@@ -59,7 +59,7 @@ title: Research Initiatives
 
 <h2>Open Science</h2>
 
-<p>I subscribe to the open science principles and strife to make all of my research accessible and reusable. In the scope of this endeavor, my colleagues and I also try to support the software engineering research community with guidelines on how to improve adherence to open science principles.</p>
+<p>I subscribe to the open science principles and strive to make all of my research accessible and reusable. In the scope of this endeavor, my colleagues and I also try to support the software engineering research community with guidelines on how to improve adherence to open science principles.</p>
 
 <ol class="pub-list">
     <li>Frattini, J., Montgomery, L., Fucci, D., Unterkalmsteiner, M., Mendez, D., & Fischbach, J. (2024). <b>Requirements quality research artifacts: Recovery, analysis, and management guideline</b>. Journal of Systems and Software. DOI: <a href="https://doi.org/10.1016/j.jss.2024.112120" target="_blank">10.1016/j.jss.2024.112120</a>.</li>
