Simplified landing page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: Home
+title: Hello there!
 ---
 
-<p>My research revolves around <b>quality of requirements artifacts</b>, <b>empirical research methods</b> with a focus on statistical causal inference and Bayesian data analysis, and some new topics coming soon. Stay tuned.</p> 
+<p>I am Julian, a postdoctoral researcher at the Chalmers University of Technology, Sweden. My research revolves around <b>quality of requirements artifacts</b>, <b>empirical research methods</b> with a focus on statistical causal inference and Bayesian data analysis, and some new topics coming soon. Stay tuned.</p> 
 
 <p>On this website, you will find some basic information about me, like:</p>
 
-<!--<ul>
+<ul>
     <li><a href="{{ site.url }}/cv"><b>Curriculum vitae</b></a>: a high-level summary of my education, development, and milestones</li>
     <li><a href="{{ site.url }}/research"><b>Research</b></a>: a summary of the research that I am engaged in</li>
     <ul>
@@ -15,9 +15,9 @@ title: Home
         <li><a href="{{ site.url }}/thesis"><b>Ph.D. Thesis</b></a>: the set of publications that compose my dissertation</li>
         <li><a href="{{ site.url }}/publications"><b>Publications</b></a>: a full list of publications that I was involved in</li>
     </ul>
-</ul>-->
+</ul>
 
-<div class="tilebox">
+<!--<div class="tilebox">
     <a class="tile" href="{{ site.url }}/cv">
         <span class="icon-item">
             <i class="fa-solid fa-school"></i>
@@ -47,6 +47,6 @@ title: Home
         <h3>Publications</h3>
         <span>Full list of peer-reviewed publications</span>
     </a>
-</div>
+</div>-->
 
 <p>If you require any further information, please feel free to <a href="mailto:julian.frattini@chalmers.se">contact me</a>. Links to my profile on other platforms can be found at the bottom of the sidebar.</p>
