Repaired blog structure (closes #2)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: Hello there!
         <li><a href="{{ site.url }}/thesis"><b>Ph.D. Thesis</b></a>: the set of publications that compose my dissertation</li>
         <li><a href="{{ site.url }}/publications"><b>Publications</b></a>: a full list of publications that I was involved in</li>
     </ul>
+    <li><a href="{{ site.url }}/blog"><b>Blog</b></a>: some thoughts and summaries on topics I am passionate about</li>
 </ul>
 
 <!--<div class="tilebox">
